test-project-compiler/src/snapshots/test_project_compiler__generated_tests__with_dep_lsp.snap
---
source: test-project-compiler/src/generated_tests.rs
assertion_line: 32
expression: "./cases/with_dep"
---
//// with_dep/build/lsp/erlang/example/_rakun_artefacts/example@@main.erl
<erlang entrypoint>

//// with_dep/build/lsp/erlang/example/ebin/example.app
{application, example, [
    {vsn, "1.0.0"},
    {applications, [package_a]},
    {description, ""},
    {modules, []},
    {registered, []}
]}.


//// with_dep/build/lsp/erlang/rakun_version
<rakun compiler version string>
